--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "rate-limiter",
   "version": "1.0.0",
   "description": "Implement a rate-limiter middleware.",
+  "type": "module",
   "main": "app.js",
   "scripts": {
+    "dev": "cross-env NODE_ENV=dev nodemon --es-module-specifier-rsolution=node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,18 @@
   "bugs": {
     "url": "https://github.com/justin0u0/rate-limiter/issues"
   },
-  "homepage": "https://github.com/justin0u0/rate-limiter#readme"
+  "homepage": "https://github.com/justin0u0/rate-limiter#readme",
+  "dependencies": {
+    "async-redis": "^1.1.7",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.7"
+  }
 }
