--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "homepage": "https://github.com/justin0u0/rate-limiter#readme",
   "dependencies": {
-    "async-redis": "^1.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "redis": "^3.0.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "loadtest": "^5.1.2",
     "nodemon": "^2.0.7"
   }
 }
